--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,14 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.dropwizard/dropwizard-assets -->
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-assets</artifactId>
+            <version>1.3.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
