--- a/src/environments/development.yml
+++ b/src/environments/development.yml
@@ -5,22 +5,15 @@ server:
       port: 8082
       outputBufferSize: 5MiB
     - type: https
-<<<<<<< Updated upstream
-      port: 8088
-      keyStorePath: /Users/OS/IdeaProjects/http-progressive-download-example/src/environments/keystore
-=======
+#      port: 8088
+#      keyStorePath: /Users/OS/IdeaProjects/http-progressive-download-example/src/environments/keystore
       port: 8090
       keyStorePath: F:/Workspaces/APP/http-progressive-download-examples/src/environments/keystore
->>>>>>> Stashed changes
       keyStorePassword: skyclass
       validateCerts: false
 
   adminConnectors:
     - type: http
       port: 8081
-
-<<<<<<< Updated upstream
-videosDirectory: /Users/OS/IdeaProjects/http-progressive-download-example/src/test/resources/videos
-=======
+#videosDirectory: /Users/OS/IdeaProjects/http-progressive-download-example/src/test/resources/videos
 videosDirectory: file:/H:/videos
->>>>>>> Stashed changes
